# WindowsAudioPlugin

./: CMakeLists.txt  LICENSE  README.md  windows.bat
src/hook/: ApiInfo.cpp  ApiInfo.h  AudioHook.cpp  AudioHook.def  AudioHook.h  CMakeLists.txt  dllmain.cpp
src/main/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  HiddenWnd.cpp  HiddenWnd.h  HookInstaller.cpp  HookInstaller.h  MainApp.cpp  MainApp.h  PowerMonitor.cpp  PowerMonitor.h  Settings.cpp  Settings.h  SystemTray.cpp  SystemTray.h  resource.h  resource.rc
tools/: readme.txt
